--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
-  <head></head>
-  <body></body>
+
+<head>
+
+</head>
+
+<body>
+  <div style="background-color: #ffffff"></div>
+</body>
+
 </html>
